--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-    <title>Document</title>
+    <title>Stone_Paper_Scissors</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
